<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.RedditItemDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/subreddit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/answer_frame"
                android:fontFamily="@font/quicksand_bold"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="--"
                android:textColor="@color/purple_700" />

            <TextView
                android:id="@+id/titlee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="--"
                android:textColor="@color/bbb"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/selftext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="--"
                android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Created By" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="-"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="on"
            android:visibility="gone" />

        <TextView
            android:id="@+id/created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="TextView"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@drawable/frame_curve"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imagngeView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_thumb_down" />

            <TextView
                android:id="@+id/downs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="-" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/frame_curve"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageVijnew"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_thumb_up" />

            <TextView
                android:id="@+id/ups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="-" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/frame_curve"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imagekjView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_round_favorite_24" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="-" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/frame_curve"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_comment" />

            <TextView
                android:id="@+id/num_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="-" />
        </LinearLayout>

    </LinearLayout>


            <TextView
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="-" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="moreDetails"
                android:text="View More Details >>" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>