<resources>
    <string name="app_name">T Reddit App</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="trending">Trending</string>
    <string name="best">Best</string>
    <string name="rising">Rising</string>
    <string name="controversial">Controversial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>